--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_WP_API_URL= https://aamadesign.luciepetit.fr/wp-json
+VITE_WP_API_URL= https://admin.aamadesign.luciepetit.fr/wp-json
 
 VITE_WP_USERNAME= lpetit
 
